# PythonRosGazebo

./: gitklucz  gitklucz.pub
devel/: .catkin  .rosinstall
devel/$(CATKIN_PACKAGE_BIN_DESTINATION)/: open_subscriber.py  publisher_node.py  subscriber_node.py
devel/lib/pkgconfig/: package1.pc
devel/share/package1/cmake/: package1Config.cmake
klucze/: git_klucz
src/package1/: CMakeLists.txt  package.xml
src/package1/launch/: launch_model1.launch  launch_world1.launch
src/package1/models_urdf/model1/: model.sdf
src/package1/scripts/: subscriber_node.py
src/package1/worlds/: world1
src/package1/zdj/: bruce.jpg:Zone.Identifier  chuck.jpg:Zone.Identifier
